analize e termo
